# hadoop

hadoop-tools/hadoop-pipes/: pom.xml
hadoop-tools/hadoop-pipes/src/: CMakeLists.txt
hadoop-yarn-project/: CHANGES.txt  pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-api/src/main/proto/: yarn_protos.proto
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-common/src/main/java/org/apache/hadoop/yarn/client/api/impl/: TimelineClientImpl.java
